# blockcell

./: .gitignore  Cargo.toml
crates/agent/src/: context.rs  lib.rs  response_cache.rs  runtime.rs  skill_decision.rs  skill_kernel.rs
crates/channels/src/: account.rs  dingtalk.rs  manager.rs  wecom.rs
crates/core/src/: config.rs  paths.rs  types.rs
crates/providers/: Cargo.toml
crates/providers/src/: anthropic.rs  gemini.rs  lib.rs  ollama.rs  openai.rs
crates/scheduler/src/: cron_service.rs
crates/skills/src/: dispatcher.rs  manager.rs  service.rs
crates/storage/src/: session.rs
crates/tools/src/: lib.rs  registry.rs  session_recall.rs  spawn.rs  video_process.rs
docs/: 02_quickstart.md  17_cli_reference.md
docs/channels/en/: 09_qq.md
docs/channels/zh/: 06_wecom.md  09_qq.md
docs/plans/: 2026-03-13-skills-flow-optimization-design.md  2026-03-13-skills-flow-optimization-implementation.md
rules/: 01-prompt-only-skill-development.md  02-rhai-skill-development.md  03-python-skill-development.md  README.md
skills/weather/: SKILL.rhai
webui/src/lib/: store.ts
