[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/agent",
    "crates/tools",
    "crates/skills",
    "crates/scheduler",
    "crates/channels",
    "crates/providers",
    "crates/updater",
    "crates/storage",
    "bin/blockcell",
]

[workspace.package]
version = "0.1.4"
edition = "2021"
authors = ["blockcell"]
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
json5 = "0.4"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart", "stream"], default-features = false }

# CLI
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async utilities
async-trait = "0.1"
futures = "0.3"
bytes = "1.5"
tokio-util = { version = "0.7", features = ["compat"] }

# JSON Schema
schemars = "0.8"

# Scripting (Rhai)
rhai = { version = "1.17", features = ["sync"] }

# Cron
cron = "0.12"
chrono = { version = "0.4", features = ["serde"] }

# Crypto
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
base64 = "0.22"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Directories
dirs = "5.0"

# File watching
notify = "6.1"

# Regex
regex = "1.10"

# HTML parsing
scraper = "0.18"
htmd = "0.5"

# Office file reading
calamine = "0.26"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
quick-xml = "0.37"

# Which (find binaries)
which = "6.0"

# Archive (tar.gz)
flate2 = "1.0"
tar = "0.4"

# PDF
pdf-extract = "0.7"

# CSV
csv = "1.3"

# Email
lettre = { version = "0.11", features = ["smtp-transport", "tokio1-rustls-tls", "builder", "ring"], default-features = false }
async-imap = "0.10"
tokio-rustls = "0.24"
rustls-native-certs = "0.7"

# SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

# Lazy statics
once_cell = "1.19"

# URL encoding
urlencoding = "2.1"

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
url = "2.5"

# HTTP server (gateway)
axum = { version = "0.7", features = ["ws", "json"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
rust-embed = { version = "8.2", features = ["mime-guess"] }
mime_guess = "2.0"

# Workspace crates
blockcell-core = { path = "crates/core" }
blockcell-agent = { path = "crates/agent" }
blockcell-tools = { path = "crates/tools" }
blockcell-skills = { path = "crates/skills" }
blockcell-scheduler = { path = "crates/scheduler" }
blockcell-channels = { path = "crates/channels" }
blockcell-providers = { path = "crates/providers" }
blockcell-updater = { path = "crates/updater" }
blockcell-storage = { path = "crates/storage" }

# Release profile optimizations for smaller binary size
[profile.release]
opt-level = "z"          # Optimize for size (z = smallest, s = small, 3 = fast)
lto = true               # Enable Link Time Optimization
codegen-units = 1        # Better optimization (slower compile, smaller binary)
strip = true             # Strip symbols from binary
panic = "abort"          # Reduce panic handling overhead

# Optional: even more aggressive size optimization profile
# Use with: cargo build --profile release-min
[profile.release-min]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
